Changelog for CinemaVision

[- 1.0.14 -]

- add:     Ability to define sequence attributes for conditional sequence selection
- fix:     Issues found with non-english characters in the file names of Action files causing errors
- fix:     Issue #6 - With context menu visible the options icon for disabled changes to enabled
- fix:     Issue #70 - Up/Down nav on options occasionally fails
- fix:     Issue #71 - ImportError: Failed to import _strptime because the import lockis held by another thread
- fix:     Issue #78 - AttributeError: 'ExperiencePlayer' object has no attribute 'processor'
- change:  Issue #33 - Change demo content location
- fix:     Issue #10 - When adding module sometimes jumps to the start
- fix:     Issue #73 - iTunes scraper picking up clips
- change:  Issue #74 - Remove 'Enabled: YES/NO' from settings display
- add:     Issue #50 - Add 'Reset module to defaults'
- fix:     Update demo music to point to a working stream

[- 1.0.13 -]

- add:     Now has the ability to accept dbtype and dbid args for skin integration

[- 1.0.12 -]

- fix:     Broken iTunes scraper
- change:  Updated icon
- change:  Now automatically updates content when the content path is changed
- fix:     Now cleans items from the database that do not have the content path as their path prefix
- fix:     Content scraper now recognizes files with capitalized extensions
- add:     Added language string 'CinemaVision' with ID 32000 to help skinners
- add:     Portuguese (Brazil) language strings
- add:     Screenshots (for display in add-on info)

[- 1.0.11 -]

- fix:     Startup error on some devices (Android/Shield?)
- change:  Greatly decrease content updating time
- add:     Extra logging for sequence saving and trivia content updating
- fix:     Handle trivia with same file name but different extension

[- 1.0.10 -]

- fix:     Error playing sequence when video bumper type is not set